{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 80,
  "lineage": "02c2db5f-e64f-20c4-a755-820887bb9c57",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-06-07T15:38:18.528-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fullstacknet/global/firewalls/burnto-firewall",
            "log_config": [],
            "name": "burnto-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/fullstacknet/global/networks/prod-burnto-env",
            "priority": 1000,
            "project": "fullstacknet",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fullstacknet/global/firewalls/burnto-firewall",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "wordpress",
              "wp"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-07T15:38:18.133-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fullstacknet/global/firewalls/floridaburns-db-firewall",
            "log_config": [],
            "name": "floridaburns-db-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/fullstacknet/global/networks/prod-burnto-db-env",
            "priority": 1000,
            "project": "fullstacknet",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fullstacknet/global/firewalls/floridaburns-db-firewall",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "database",
              "db"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "VPC Network for WordPress",
            "id": "projects/fullstacknet/global/networks/prod-burnto-env",
            "mtu": 0,
            "name": "prod-burnto-env",
            "project": "fullstacknet",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fullstacknet/global/networks/prod-burnto-env"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "VPC Network For dataBase",
            "id": "projects/fullstacknet/global/networks/prod-burnto-db-env",
            "mtu": 0,
            "name": "prod-burnto-db-env",
            "project": "fullstacknet",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fullstacknet/global/networks/prod-burnto-db-env"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-07T15:38:18.425-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/fullstacknet/regions/us-central1/subnetworks/burnto-subnet",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "burnto-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/fullstacknet/global/networks/prod-burnto-env",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "fullstacknet",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fullstacknet/regions/us-central1/subnetworks/burnto-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-07T15:38:19.554-07:00",
            "gateway_address": "10.4.0.1",
            "id": "projects/fullstacknet/regions/asia-south1/subnetworks/floridaburns-db-subnet",
            "ip_cidr_range": "10.4.0.0/16",
            "name": "floridaburns-db-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/fullstacknet/global/networks/prod-burnto-db-env",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "fullstacknet",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fullstacknet/regions/asia-south1/subnetworks/floridaburns-db-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "bac",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "floridaburns",
            "metadata": [
              {
                "generation": 0,
                "name": "floridaburns",
                "resource_version": "2189",
                "uid": "8f416f87-08d1-4d75-a604-94c93abf7f97"
              }
            ]
          },
          "dependencies": [
            "data.google_client_config.default",
            "google_compute_network.vpc_network1",
            "google_compute_subnetwork.subnetwork1",
            "google_container_cluster.gke_cluster1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "wpService",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/wp-svc",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "env": "Production"
                },
                "name": "wp-svc",
                "namespace": "default",
                "resource_version": "39449",
                "uid": "4bd01b36-bb78-45f8-ab82-63a5470cfb84"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.191.244.165",
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "wp-port",
                    "node_port": 32653,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "pod": "wp"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "ip": "34.135.127.194"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "data.google_secret_manager_secret_version.database",
            "data.google_secret_manager_secret_version.db_user",
            "data.google_secret_manager_secret_version.db_user_pass",
            "data.google_secret_manager_secret_version.root_pass",
            "google_compute_subnetwork.subnetwork2",
            "google_container_cluster.gke_cluster1",
            "google_container_node_pool.nodepool1",
            "google_sql_database_instance.sqldb_Instance",
            "kubernetes_deployment.wp-dep",
            "null_resource.configure_kubectl",
            "null_resource.set_gcloud_project"
          ]
        }
      ]
    }
  ]
}